--- a/laptop/home/configs/hyprland.conf
+++ b/laptop/home/configs/hyprland.conf
@@ -44,9 +44,11 @@ $menu = wofi --show drun
 # Autostart necessary processes (like notifications daemons, status bars, etc.)
 # Or execute your favorite apps at launch like this:
 
-# exec-once = $terminal
-# exec-once = nm-applet &
-# exec-once = waybar & hyprpaper & firefox
+exec-once = $terminal
+exec-once = code ~/.dotfiles
+exec-once = nm-applet &
+exec-once = waybar
+exec-once = wireplumber
 
 
 #############################
@@ -192,6 +194,7 @@ bind = $mainMod, V, togglefloating,
 bind = $mainMod, R, exec, $menu
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # dwindle
+bind = $mainMod, A, exec, fuzzel
 
 # Move focus with mainMod + arrow keys
 bind = $mainMod, left, movefocus, l
@@ -222,6 +225,13 @@ bind = $mainMod SHIFT, 7, movetoworkspace, 7
 bind = $mainMod SHIFT, 8, movetoworkspace, 8
 bind = $mainMod SHIFT, 9, movetoworkspace, 9
 bind = $mainMod SHIFT, 0, movetoworkspace, 10
+
+# Laptop buttons
+bind = ,XF86AudioRaiseVolume, exec, amixer -q set Master 5%+
+bind = ,XF86AudioLowerVolume, exec, amixer -q set Master 5%-
+bind = ,XF86AudioMute, exec, amixer -q set Master toggle
+bind = ,XF86MonBrightnessUp, exec, brightnessctl set 5%+
+bind = ,XF86MonBrightnessDown, exec, brightnessctl set 5%-
 
 # Example special workspace (scratchpad)
 bind = $mainMod, S, togglespecialworkspace, magic
